feat(SecondClient) generate Angular application
Generate Angular application “SecondClient” exactly same way as “FirstClient” one was generated.

Run via: `nx g @nrwl/angular:application second-client --e2eTestRunner=none --linter=eslint --strict`

--- a/nx.json
+++ b/nx.json
@@ -11,5 +11,8 @@
       "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
-  "projects": { "first-client": { "tags": [] } }
+  "projects": {
+    "first-client": { "tags": [] },
+    "second-client": { "tags": [] }
+  }
 }
