--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular-eslint/eslint-plugin-template": "~2.0.2",
     "@angular-eslint/template-parser": "~2.0.2",
     "@angular/compiler-cli": "^11.2.0",
+    "@angular/cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
     "@nrwl/angular": "^12.0.8",
     "@nrwl/cli": "12.0.8",
