feat: set schematics defaults
Set following additional default parameters for some schematics:

Generate new libraries (@nrwl/angular:library schematics) always as buildable (to benefit from nx incremental build) and with IVY enabled (mainly to improve type checking and performance).

Generate new components (@schematics/angular schematics) always with “OnPush” change detection strategy (to improve overall performance).

--- a/angular.json
+++ b/angular.json
@@ -200,10 +200,17 @@
     "@nrwl/angular:library": {
       "style": "scss",
       "linter": "eslint",
-      "unitTestRunner": "jest"
+      "unitTestRunner": "jest",
+      "buildable": true,
+      "enableIvy": true
     },
     "@nrwl/angular:component": {
       "style": "scss"
+    },
+    "@schematics/angular": {
+      "component": {
+        "changeDetection": "OnPush"
+      }
     }
   },
   "defaultProject": "first-client"
