feat(shared:ui) create buttons library
Create shared ui buttons library with single Button component.

Since this is first library generation, some new dependencies are added and `angular.json` structure is slightly modified.

Library generated via `nx g @nrwl/angular lib shared/ui/buttons`.

--- a/nx.json
+++ b/nx.json
@@ -13,6 +13,7 @@
   },
   "projects": {
     "first-client": { "tags": [] },
-    "second-client": { "tags": [] }
+    "second-client": { "tags": [] },
+    "shared-ui-buttons": { "tags": [] }
   }
 }
