--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "@angular-eslint/eslint-plugin": "~2.0.2",
     "@angular-eslint/eslint-plugin-template": "~2.0.2",
     "@angular-eslint/template-parser": "~2.0.2",
-    "@angular/compiler-cli": "^11.2.0",
     "@angular/cli": "^11.2.0",
+    "@angular/compiler-cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
     "@nrwl/angular": "^12.0.8",
     "@nrwl/cli": "12.0.8",
@@ -64,6 +64,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
+    "ng-packagr": "^11.0.0",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
