--- a/angular.json
+++ b/angular.json
@@ -6,9 +6,9 @@
       "root": "apps/first-client",
       "sourceRoot": "apps/first-client/src",
       "prefix": "nx-monorepo-demo",
-      "targets": {
+      "architect": {
         "build": {
-          "executor": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/first-client",
             "index": "apps/first-client/src/index.html",
@@ -20,9 +20,7 @@
               "apps/first-client/src/favicon.ico",
               "apps/first-client/src/assets"
             ],
-            "styles": [
-              "apps/first-client/src/styles.scss"
-            ],
+            "styles": ["apps/first-client/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -56,7 +54,7 @@
           }
         },
         "serve": {
-          "executor": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "first-client:build"
           },
@@ -67,13 +65,13 @@
           }
         },
         "extract-i18n": {
-          "executor": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "first-client:build"
           }
         },
         "lint": {
-          "executor": "@nrwl/linter:eslint",
+          "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": [
               "apps/first-client/src/**/*.ts",
@@ -82,10 +80,8 @@
           }
         },
         "test": {
-          "executor": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/first-client"
-          ],
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/first-client"],
           "options": {
             "jestConfig": "apps/first-client/jest.config.js",
             "passWithNoTests": true
@@ -98,9 +94,9 @@
       "root": "apps/second-client",
       "sourceRoot": "apps/second-client/src",
       "prefix": "nx-monorepo-demo",
-      "targets": {
+      "architect": {
         "build": {
-          "executor": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/apps/second-client",
             "index": "apps/second-client/src/index.html",
@@ -112,9 +108,7 @@
               "apps/second-client/src/favicon.ico",
               "apps/second-client/src/assets"
             ],
-            "styles": [
-              "apps/second-client/src/styles.scss"
-            ],
+            "styles": ["apps/second-client/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -148,7 +142,7 @@
           }
         },
         "serve": {
-          "executor": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "second-client:build"
           },
@@ -159,13 +153,13 @@
           }
         },
         "extract-i18n": {
-          "executor": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "second-client:build"
           }
         },
         "lint": {
-          "executor": "@nrwl/linter:eslint",
+          "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": [
               "apps/second-client/src/**/*.ts",
@@ -174,12 +168,47 @@
           }
         },
         "test": {
-          "executor": "@nrwl/jest:jest",
-          "outputs": [
-            "coverage/apps/second-client"
-          ],
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/second-client"],
           "options": {
             "jestConfig": "apps/second-client/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "shared-ui-buttons": {
+      "projectType": "library",
+      "root": "libs/shared/ui/buttons",
+      "sourceRoot": "libs/shared/ui/buttons/src",
+      "prefix": "nx-monorepo-demo",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/shared/ui/buttons/tsconfig.lib.json",
+            "project": "libs/shared/ui/buttons/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/shared/ui/buttons/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/shared/ui/buttons/src/**/*.ts",
+              "libs/shared/ui/buttons/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared/ui/buttons"],
+          "options": {
+            "jestConfig": "libs/shared/ui/buttons/jest.config.js",
             "passWithNoTests": true
           }
         }
