--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-monorepo-demo/shared/ui/buttons": [
+        "libs/shared/ui/buttons/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
