feat: setup nx tags
Create eslint rules definition for nx tags, so we can benefit from nx module boundaries strict validation (which is essential for clear code and for libraries building as well).

Set basic commonly used type tags (ui, util, data-access, feature) with following rules:

UTIL
- libraries with tag “type:util” can depend only on libraries with “type:util” tag
- util libraries are used to store basic essentials (such as interfaces, types, enums, …) for one segment (domain/module/part/…) which are used (imported) commonly among other libraries (across other segments as well)

UI
- libraries with tag “type:ui” can depend only on libraries with tags “type:util” or “type:ui”
- ui libraries are places for stateless (dumb) components or pipes which usually accepts few inputs and only purpose is display it (in html with styles). These components and are independent on any additional data services, providers, etc..

DATA ACCESS
- libraries with tag “type:data-access” can depend only on libraries with tags “type:util” or “type:data-access”
- usually don’t include any components but only services (and modules) … this is place for all data and state related services, such as http services, ngrx, etc.

FEATURE
- rule for feature tags is not included, so libraries with tag “type:feature” can depend on any other libraries
- usually stores lazy loaded route-related modules with page components

Also scope validation is set (via tag “scope:”) to ensure application-specific libraries aren’t imported in applications (or libraries) from another scope.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,13 @@
             "enforceBuildableLibDependency": true,
             "allow": [],
             "depConstraints": [
-              { "sourceTag": "*", "onlyDependOnLibsWithTags": ["*"] }
+              { "sourceTag": "scope:first-client", "onlyDependOnLibsWithTags": ["scope:first-client", "scope:shared"] },
+              { "sourceTag": "scope:second-client", "onlyDependOnLibsWithTags": ["scope:second-client", "scope:shared"] },
+              { "sourceTag": "scope:shared", "onlyDependOnLibsWithTags": ["scope:shared"] },
+
+              { "sourceTag": "type:util", "onlyDependOnLibsWithTags": ["type:util"] },
+              { "sourceTag": "type:ui", "onlyDependOnLibsWithTags": ["type:util", "type:ui"] },
+              { "sourceTag": "type:data-access", "onlyDependOnLibsWithTags": ["type:util", "type:data-access"] }
             ]
           }
         ]
