--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,7 @@
   "projects": {
     "first-client": { "tags": ["scope:first-client"] },
     "second-client": { "tags": ["scope:second-client"] },
-    "shared-ui-buttons": { "tags": ["scope:shared", "type:ui"] }
+    "shared-ui-buttons": { "tags": ["scope:shared", "type:ui"] },
+    "shared-segments-errors-shell": { "tags": ["scope:shared", "type:feature"] }
   }
 }
