feat(FirstClient:Products) create util library
Create simple util library with Product interface and ProductStatus enumerator.

--- a/nx.json
+++ b/nx.json
@@ -15,6 +15,7 @@
     "first-client": { "tags": ["scope:first-client"] },
     "second-client": { "tags": ["scope:second-client"] },
     "shared-ui-buttons": { "tags": ["scope:shared", "type:ui"] },
-    "shared-segments-errors-shell": { "tags": ["scope:shared", "type:feature"] }
+    "shared-segments-errors-shell": { "tags": ["scope:shared", "type:feature"] },
+    "first-client-segments-products-util": { "tags": ["scope:first-client", "type:util"] }
   }
 }
