--- a/angular.json
+++ b/angular.json
@@ -250,6 +250,43 @@
           }
         }
       }
+    },
+    "first-client-segments-products-util": {
+      "projectType": "library",
+      "root": "libs/first-client/segments/products/util",
+      "sourceRoot": "libs/first-client/segments/products/util/src",
+      "prefix": "nx-monorepo-demo",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/first-client/segments/products/util/tsconfig.lib.json",
+            "project": "libs/first-client/segments/products/util/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/first-client/segments/products/util/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/first-client/segments/products/util/src/**/*.ts",
+              "libs/first-client/segments/products/util/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/first-client/segments/products/util"],
+          "options": {
+            "jestConfig": "libs/first-client/segments/products/util/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "cli": {
