--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@nrwl/linter": "12.0.8",
     "@nrwl/tao": "12.0.8",
     "@nrwl/workspace": "12.0.8",
+    "@types/faker": "^5.5.3",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -62,6 +63,7 @@
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "faker": "^5.5.3",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "ng-packagr": "^11.0.0",
