--- a/nx.json
+++ b/nx.json
@@ -15,7 +15,12 @@
     "first-client": { "tags": ["scope:first-client"] },
     "second-client": { "tags": ["scope:second-client"] },
     "shared-ui-buttons": { "tags": ["scope:shared", "type:ui"] },
-    "shared-segments-errors-shell": { "tags": ["scope:shared", "type:feature"] },
-    "first-client-segments-products-util": { "tags": ["scope:first-client", "type:util"] }
+    "shared-segments-errors-shell": {
+      "tags": ["scope:shared", "type:feature"]
+    },
+    "first-client-segments-products-util": {
+      "tags": ["scope:first-client", "type:util"]
+    },
+    "first-client-segments-products-ui": { "tags": ["scope:first-client", "type:ui"] }
   }
 }
