Feat(FirstClient) create shell library with layout
Generate shell library for “FirstClient” application. Main purpose of these types of shell libraries (also application shell libraries) is to define layout of part of application (or, such as in this case, of whole application) and setup routes for that part.

For instance, more application shells could be used when application is divided into 2 parts. First one is available for all visitors (and includes eg. login form). Second part has totally different layout and is available only to logged users.

--- a/angular.json
+++ b/angular.json
@@ -363,6 +363,43 @@
           }
         }
       }
+    },
+    "first-client-shell": {
+      "projectType": "library",
+      "root": "libs/first-client/shell",
+      "sourceRoot": "libs/first-client/shell/src",
+      "prefix": "nx-monorepo-demo",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:ng-packagr-lite",
+          "options": {
+            "tsConfig": "libs/first-client/shell/tsconfig.lib.json",
+            "project": "libs/first-client/shell/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/first-client/shell/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/first-client/shell/src/**/*.ts",
+              "libs/first-client/shell/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/first-client/shell"],
+          "options": {
+            "jestConfig": "libs/first-client/shell/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   },
   "cli": {
