--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,9 @@
       ],
       "@nx-monorepo-demo/first-client/segments/products/data-access": [
         "libs/first-client/segments/products/data-access/src/index.ts"
+      ],
+      "@nx-monorepo-demo/first-client/shell": [
+        "libs/first-client/shell/src/index.ts"
       ]
     }
   },
