--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,9 @@
       "tags": ["scope:first-client", "type:data-access"]
     },
     "first-client-shell": { "tags": ["scope:first-client", "type:feature"] },
-    "first-client-segments-products-shell": { "tags": ["scope:first-client", "type:feature"] }
+    "first-client-segments-products-shell": {
+      "tags": ["scope:first-client", "type:feature"]
+    },
+    "shared-ui-theme": { "tags": ["scope:shared", "type:ui"] }
   }
 }
