--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,7 +36,12 @@
       "@nx-monorepo-demo/first-client/segments/products/shell": [
         "libs/first-client/segments/products/shell/src/index.ts"
       ],
-      "@nx-monorepo-demo/shared/ui/theme": ["libs/shared/ui/theme/src/index.ts"]
+      "@nx-monorepo-demo/shared/ui/theme": [
+        "libs/shared/ui/theme/src/index.ts"
+      ],
+      "@nx-monorepo-demo/shared/ui/sidebar": [
+        "libs/shared/ui/sidebar/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
