--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,7 @@
     "first-client-segments-products-shell": {
       "tags": ["scope:first-client", "type:feature"]
     },
-    "shared-ui-theme": { "tags": ["scope:shared", "type:ui"] }
+    "shared-ui-theme": { "tags": ["scope:shared", "type:ui"] },
+    "shared-ui-sidebar": { "tags": ["scope:shared", "type:ui"] }
   }
 }
