--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -41,6 +41,9 @@
       ],
       "@nx-monorepo-demo/shared/ui/sidebar": [
         "libs/shared/ui/sidebar/src/index.ts"
+      ],
+      "@nx-monorepo-demo/second-client/shell": [
+        "libs/second-client/shell/src/index.ts"
       ]
     }
   },
