--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-unused-imports": "^1.1.1",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.2",
     "ng-packagr": "^11.0.0",
